--- a/01_RestWithASPNET5_ScaffoldViaVisualStudio/RestWithASP-NET5/RestWithASPNET5/Properties/launchSettings.json
+++ b/01_RestWithASPNET5_ScaffoldViaVisualStudio/RestWithASP-NET5/RestWithASPNET5/Properties/launchSettings.json
@@ -1,26 +1,27 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50849",
-      "sslPort": 44384
+      "applicationUrl": "http://localhost:61012",
+      "sslPort": 44394
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "RestWithASP_NET5": {
+    "RestWithASPNET5": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
